@@ -2,7 +2,11 @@
 
 package org.cryptomator.jfuse.win.amd64.extr;
 
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class fcntl_h  {
 
     /* package-private */ fcntl_h() {}
